demo/k8s/web-v1.2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: eshop/web:v1.2
          ports:
            - containerPort: 80
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 60
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 600
          resources:
            requests:
              cpu: 40m
              memory: 128Mi
            limits:
              cpu: 150m
              memory: 256Mi
          volumeMounts:
            - name: aspnet
              mountPath: ~/.aspnet/https:/root/.aspnet/https:ro
      volumes:
        - name: aspnet
          persistentVolumeClaim:
            claimName: aspnet-data
