demo/k8s/publicapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publicapi
  labels:
    app: publicapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publicapi
  template:
    metadata:
      labels:
        app: publicapi
    spec:
      containers:
        - name: publicapi
          image: publicapi:v0.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 5m
              memory: 128Mi
            limits:
              cpu: 10m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: publicapi
spec:
  selector:
    app: publicapi
  ports:
    - protocol: TCP
      port: 80
