demo/k8s/web-v1.2.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: eshop/web:v1.2.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
            limits:
              cpu: 50m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
