demo/k8s/web-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: web:v0.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
            limits:
              cpu: 50m
              memory: 1024Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
