demo/k8s/chatapi-v1.1-darklaunch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapi-v2
  labels:
    app: chatapi
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapi
      version: v2
  template:
    metadata:
      labels:
        app: chatapi
        version: v2
    spec:
      containers:
        - name: chatapi
          image: eshop/chatapi:v2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 5m
              memory: 128Mi
            limits:
              cpu: 10m
              memory: 256Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chatapi
spec:
  host: chatapi.eshop.svc.cluster.local
  subsets:
    - name: version-v1
      labels:
        version: v1
    - name: version-v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chatapi
spec:
  hosts:
    - "*"
  gateways:
    - chatapi
  http:
    - match:
        - uri:
            prefix: /shopassist
          headers:
            x-istio-msbuild:
              exact: "brk225h"
      route:
        - destination:
            host: chatapi
            subset: version-v2
    - match:
        - uri:
            prefix: /shopassist
      route:
        - destination:
            host: chatapi
            subset: version-v1
