demo/k8s/chatapi-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapi-v1
  labels:
    app: chatapi
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapi
      version: v1
  template:
    metadata:
      labels:
        app: chatapi
        version: v1
    spec:
      containers:
        - name: chatapi
          image: acrbuild20237248.azurecr.io/eshop/chatapi:v1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 5m
              memory: 128Mi
            limits:
              cpu: 10m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chatapi
spec:
  selector:
    app: chatapi
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chatapi
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chatapi
spec:
  hosts:
    - "*"
  gateways:
    - chatapi
  http:
    - match:
        - uri:
            prefix: /shopassist
      route:
        - destination:
            host: chatapi
            port:
              number: 80
