demo/k8s/istio-eshop.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eshop-gw-external
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eshop-vs-external
spec:
  hosts:
    - "*"
  gateways:
    - eshop-gw-external
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: publicapi
            port:
              number: 80
    - route:
        - destination:
            host: web
            port:
              number: 80
